fixed nav on mobile and added toggle functionality

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ hr {
   margin-bottom: 1.5rem;
 }
 
-nav ul a {
+.navbar ul a {
   font-size: 1rem;
   color: var(--important-text);
   text-transform: lowercase;
@@ -105,11 +105,11 @@ nav ul a {
   transition: color 0.3s ease-in-out;
 }
 
-nav ul a:hover {
+.navbar ul a:hover {
   color: var(--orange)
 }
 
-nav ul a:last-child {
+.navbar ul a:last-child {
   color: #fff;
   background: var(--orange);
   text-transform: uppercase;
@@ -406,16 +406,114 @@ section {
 
 @media screen and (max-width: 500px) {
   /* Nav bar */
-   .navbar {
-     display: none;
-   }
 
-   .nav-container {
+  .logo {
+    width: 30%;
+    margin: 0;
+    position: relative;
+    top: 1.5rem;
+  }
+
+  .nav-container {
+    width: 25%;
+    justify-content: flex-end;
+    margin-left: auto;
+  }
+
+   .navbar {
+     height: 50%;
+     width: 50%;
+     position: fixed;
+     right: -100rem;
+     top: 16rem;
+     display: flex;
+     opacity: 0;
+     transition: all 0.5s ease;
+     justify-content: flex-end;
      align-items: center;
    }
 
-   .media-links {
-     align-self: flex-end;
+   /* active class thats added with JS */
+   .navbar.active {
+    opacity: 1;
+    right: -.2rem;
+    transition: all 0.5s ease;
+    z-index: 99;
+   }
+
+   .navbar ul {
+     width: inherit;
+     height: inherit;
+     display: flex;
+     justify-content: space-between;
+     align-items: flex-end;
+     flex-direction: column;
+   }
+
+   .navbar ul a {
+     font-size: 1.2rem;
+     color: var(--important-text);
+     margin-bottom: 2rem;
+     padding: 0 .5rem 0 0;
+     border-right: 2px solid var(--orange);
+   }
+
+   .navbar ul a:last-child {
+     padding: .5rem 2rem;
+     text-align: center;
+     width: 60%;
+     border: none;
+   }
+
+   /* Toggle */
+   .navbar-toggle {
+     position: fixed;
+     top: 34rem;
+     left: 26.4rem;
+     background: var(--orange);
+     padding: .5rem .7rem;
+     /* border: 2px solid var(--regular-text); */
+     border-radius: 50%;
+     z-index: 999;
+   }
+
+   .navbar-toggle .bar {
+    cursor: pointer;
+    display: block;
+    width: 22px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background: #fff;
+   }
+
+   #mobile-menu.is-active .bar:nth-child(2){
+    opacity: 0;
+   }
+   #mobile-menu.is-active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+   }
+   #mobile-menu.is-active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+   }
+
+   /* blur body */
+   #overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 2;
+    cursor: pointer;
+   }
+
+   #overlay.on {
+     display: block;
    }
 
 
